# service-layer-fastapi-base

./: .gitignore  README.md  cookiecutter.json
projectlayer/: cookiecutter.json  local_extensions.py
projectlayer/hooks/: post_gen_project.py  pre_gen_project.py
projectlayer/{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
projectlayer/{{cookiecutter.project_name}}/.layerconfig/projectlayer/: pyproject.toml
projectlayer/{{cookiecutter.project_name}}/docs/development/: DEVELOPMENT.md
servicelayer/: cookiecutter.json  local_extensions.py
servicelayer/hooks/: post_gen_project.py
servicelayer/{{cookiecutter.project_name}}/: .env.example
servicelayer/{{cookiecutter.project_name}}/.layerconfig/servicelayer/: pyproject.toml
servicelayer/{{cookiecutter.project_name}}/.retrospective/servicelayer/: servicelayer.json
servicelayer/{{cookiecutter.project_name}}/app/: main.py
servicelayer/{{cookiecutter.project_name}}/app/ext/config/: .dev.py  .int.py  .prod.py  .test.py  .uat.py  example.py.txt
servicelayer/{{cookiecutter.project_name}}/app/ext/routes/: .router.example.py  example.py.txt
servicelayer/{{cookiecutter.project_name}}/deployment/: Container.build  Container.run  Dockerfile.build  Dockerfile.run
servicelayer/{{cookiecutter.project_name}}/docs/agents/: Index.md
servicelayer/{{cookiecutter.project_name}}/docs/deployment/: Deployment.md
servicelayer/{{cookiecutter.project_name}}/static/swagger/: index.html  swagger-initializer.js
